loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:5: error: '(' expected but identifier found.
    if isOverBaggle {nbBaggle += 1}
       ^Poucet1:6: error: illegal start of simple expression
  }
  ^